we are hiring style fix - change font-weight of lead to 400 - wrap link with UiButton component

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1077,6 +1077,13 @@ select {
 
 }
 
+.we-are-hiring__lead {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  color: #1D1D1D;
+}
+
 .we-are-hiring__button {
   display: flex;
   flex-flow: row nowrap;
